[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
serde = { version = "1.0.152", features = ["derive"] }
tokio = {version = "1.25.0", features = ["full"]}
uuid = {version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
